methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:16: error: ';' expected but 'else' found.
       else (isFacingTrail()){
       ^