methods.slug.SlugHunting.scala.code
def hunt() {
  while (!estSurBiscuit()){ 
       while (isFacingTrail()){
           baisseBrosse()
           avance()
           leveBrosse()
        }
       gauche()
       if (isFacingTrail()){
           baisseBrosse()
           avance()
           leveBrosse()
       }
       droite() 
       else (isFacingTrail()){
            baisseBrosse()
            avance()
            leveBrosse()
       }
  }
  prendBiscuit()
}



def isFacingTrail():Boolean = {
    
  var verte: Boolean = false
  if (estFaceMur()){
    return false
  }
  avance()
  verte=getCouleurSol()==Color.green
  
  recule()
  return verte
}